# module-xml

./: .gitlab-ci.yml  CMakeLists.txt  Makefile.am  RELEASE-NOTES  configure.ac  qore-xml-module.spec
docs/: doxyfile.tmpl  mainpage.doxygen.tmpl
docs/qlib/: Doxyfile.tmpl
qlib/: SalesforceSoapClient.qm  SoapClient.qm  SoapHandler.qm  WSDL.qm  XmlRpcConnection.qm  XmlRpcHandler.qm
qlib/SaxDataProvider/: SaxDataProvider.qc  SaxDataProvider.qm  SaxDataProviderFacory.qc
qlib/SoapDataProvider/: SoapDataProvider.qc  SoapDataProvider.qm  SoapDataProviderBase.qc  SoapDataProviderFactory.qc  SoapOperationDataProvider.qc  SoapRequestDataProvider.qc  SoapResponseDataProvider.qc
qlib/WebDAV/: AbstractWebDAVInterface.qc  AbstractWebDAVPropertyHandler.qc  AbstractWebdavInterface.qc  AbstractWebdavPropertyHandler.qc  DummyWebDAVInterface.qc  DummyWebdavInterface.qc  FsWebDAVInterface.qc  FsWebdavInterface.qc  InMemoryWebDAVPropertyHandler.qc  InMemoryWebdavPropertyHandler.qc  WebDAV.qm  WebDAVHandler.qc  WebDAVProxyInterface.qc  WebdavHandler.qc  WebdavProxyInterface.qc
qlib/WebDavHandler/: AbstractWebDavHandler.qc  AbstractWebDavHandlerInterface.qc  AbstractWebDavInterface.qc  AbstractWebDavPropertyHandler.qc  DummyWebDavHandler.qc  DummyWebDavHandlerInterface.qc  FsWebDavHandler.qc  FsWebDavHandlerInterface.qc  FsWebDavInterface.qc  InMemoryWebDavPropertyHandler.qc  WebDavHandler.qc  WebDavHandler.qm  WebDavHandlerProxy.qc  WebDavProxyInterface.qc
src/: MakeXmlOpts.h  MakeXmlOpts.qpp  Makefile.am  QC_AbstractXmlIoInputCallback.h  QC_AbstractXmlIoInputCallback.qpp  QC_FileSaxIterator.qpp  QC_InputStreamSaxIterator.qpp  QC_SaxIterator.h  QC_SaxIterator.qpp  QC_XmlDoc.h  QC_XmlDoc.qpp  QC_XmlNode.qpp  QC_XmlReader.h  QC_XmlReader.qpp  QC_XmlRpcClient.h  QC_XmlRpcClient.qpp  QoreXPath.h  QoreXmlDoc.h  QoreXmlReader.cpp  QoreXmlReader.h  QoreXmlRpcReader.cpp  QoreXmlRpcReader.h  qc_option.qpp  ql_xml.h  ql_xml.qpp  qore-xml-module.h  single-compilation-unit.cpp  xml-module.cpp
test/: InputStreamSaxIterator.qtest  Salesforce.com.qtest  SoapClient.qtest  SoapHandler.qtest  XmlRpcClient.qtest  XmlRpcHandler.qtest  example.wsdl  issue-4449-schema-1.xsd  issue-4449-schema-2.xsd  issue-4449-schema-3.xsd  issue-4449.wsdl  simple.wsdl  soap.qtest  test.wsdl  test1.wsdl  webdav_DummyWebdavInterface.qtest  webdav_FsWebDavHandler.qtest  webdav_FsWebDavHandler_litmus.qtest  webdav_FsWebdavInterface.qtest  webdav_FsWebdavInterface_litmus.qtest  xml.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
